# learn-ai

./: README.md  pyproject.toml  re.txt
src/: Spam_Email.ipynb  Spam_email_deep.ipynb  examdatasetsad.ipynb  main.py
src/csv/: ExamTest.csv  HousePrice.csv
src/models/: Spam_email.pkl  examdatasetsad.pkl
