[project]
name = "ai-srv"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vuong Tung Duong/N/W Automation Verification P /SRV/Engineer/Samsung Electronics", email = "tung.vuong@samsung.com"},
]
dependencies = [
    "numpy>=2.1.2",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
    "joblib>=1.4.2",
    "scipy>=1.14.1",
    "torch>=2.4.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "wordcloud>=1.9.3",
    "transformers>=4.41.2",
    "evaluate>=0.4.3",
    "onnx>=1.17.0",
    "optimum>=1.20.0",
    "onnxruntime>=1.19.2",
    "sklearn>=0.0.post12",
    "faker>=30.8.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
